2010-01-21
	* 2.22.0 released
	* Fixed bug 2936564: Can't get item number or title

2009-11-03
	* 2.21.0 released
	* Fixed bug 2217106: MakeBidErrorBuyerBlockPrefNoLinkedPayPalAccount
	* Fixed bug 2631855: MakeBidErrorBuyerBlockPrefItemCountLimitExceeded
	* Fixed bug 2151466: MakeBidErrorBidGreaterThanBin_BINblock

2009-10-14
	* 2.20.0 released
	* Fixed bug 2875827 and others: Error encountered in function ebayLogin
	* Fixed bug 2862437 and others: Unknown time interval "Duration:"
	                                remaining time could not be converted

2008-08-04
	* 2.19.0 released
	* Fixed bug 2036585: enable cookies

2008-04-03
	* 2.18.1 released
	* Fixed bug 1932457: Configure fails due to wrong curl LDFLAGS

2008-04-02
	* 2.18.0 released
	* Fixed bug 1932025: Can't convert price.
	* Fixed bug 1930772: Can't convert price.

2008-03-16
	* Fixed bug 1915400: sign in request during pre-bid.

2008-01-17
	* Fixed bug 1869454: Fails with Time ramining: -- (0 seconds).
	* Fixed bug 1823864: Captcha on bid history.
	* Fixed bug 1861822: crash parsing watch list.
	* Fixed bug 1849113: Failed to make bid when using bid assistant

2007-11-22
	* Fixed bug 1835531, segfault on bid history.

2007-10-23
	* Fixed bug 1818692, get srcId ViewItem when bidding on closed auction.

2007-10-04
	* 2.17.1 released.
	* Fixed bug 1807254, unknown time interval "Refresh".

2007-10-02
	* 2.17.0 released.

2007-10-01
	* Changed to  work with eBay's new bid history page (bug 1782953)
	* Use configurable hosts in all URLs (bug 1782954)
	* Add calls to bugReport() for many error in parsing the bid
	  history.  Hopefully this will allow quicker response to new
	  bid history page changes.
	* Modified configure's libcurl check (patch 1718317)

2007-06-08
	* Fixed bug 1733869, recognize error message when seller ends
	  auction early.

2007-05-21
	* Fix segmentation fault caused by auctions with no bids and a
	  starting bid of $200 or more.

2007-04-30