@@ -2,6 +2,9 @@
 	* 2.22.0 released
 	* Fixed bug 2936564: Can't get item number or title
 
+2010-01-06:
+	* Fixed bugs 2887061 and 2922040: Recognize "bad password" page.
+
 2009-11-03
 	* 2.21.0 released
 	* Fixed bug 2217106: MakeBidErrorBuyerBlockPrefNoLinkedPayPalAccount
